ngxspinner loader added

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -57,3 +57,6 @@
     </ng-template>
   </div>
 </div>
+
+<ngx-spinner bdColor = "rgba(31,215,149,0.8)" size = "medium" color = "#fff" type = "ball-pulse" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
+
